--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -4,7 +4,7 @@
   <Import Project="targets\Admin.targets" />
   <Import Project="targets\Plugin.targets" />
   <Import Project="targets\CustomPlugin.targets" />
-  <Import Project="targets\OtherPlugin.targets" />
+  <!--<Import Project="targets\OtherPlugin.targets" />-->
   <PropertyGroup>
     <CustomTargetFramework>$(TargetFramework)</CustomTargetFramework>
     <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
