添加重启软件功能

--- a/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
+++ b/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CS-Script" Version="4.8.19" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
