--- a/src/DebugTool/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/DebugTool/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -46,7 +46,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="8.0.10" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="9.0.0-rc.2.24474.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
