--- a/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
+++ b/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
@@ -3,7 +3,7 @@
 	<Import Project="$(SolutionDir)FoundationVersion.props" />
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net8.0;net6.0;</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net9.0;net8.0;net6.0;</TargetFrameworks>
 	</PropertyGroup>
 
 	<ItemGroup>
