--- a/src/Foundation/ThingsGateway.Foundation.Variable/ThingsGateway.Foundation.Variable.csproj
+++ b/src/Foundation/ThingsGateway.Foundation.Variable/ThingsGateway.Foundation.Variable.csproj
@@ -4,7 +4,7 @@
   <Import Project="$(SolutionDir)FoundationVersion.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net8.0;net6.0;</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net9.0;net8.0;net6.0;</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
