--- a/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
+++ b/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
@@ -1,17 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="$(SolutionDir)PackNuget.props" />
-	<Import Project="$(SolutionDir)FoundationVersion.props" />
+  <Import Project="$(SolutionDir)PackNuget.props" />
+  <Import Project="$(SolutionDir)FoundationVersion.props" />
 
-	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net9.0;net8.0;net6.0;</TargetFrameworks>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;net9.0;net8.0;net6.0;</TargetFrameworks>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="CS-Script" Version="4.8.19" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	</ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'  OR  '$(TargetFramework)' == 'net9.0'">
+    <PackageReference Include="CS-Script" Version="4.8.21" />
 
-	<ItemGroup>
-		<PackageReference Include="ThingsGateway.NewLife.X" Version="$(AdminVersion)" />
-	</ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' != 'net8.0'  AND  '$(TargetFramework)' != 'net9.0'">
+    <PackageReference Include="CS-Script" Version="4.8.19" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ThingsGateway.NewLife.X" Version="$(AdminVersion)" />
+  </ItemGroup>
 </Project>
