--- a/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
+++ b/src/Foundation/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
@@ -6,12 +6,12 @@
     <TargetFrameworks>netstandard2.0;net9.0;net8.0;net6.0;</TargetFrameworks>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'  OR  '$(TargetFramework)' == 'net9.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
     <PackageReference Include="CS-Script" Version="4.8.21" />
 
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' != 'net8.0'  AND  '$(TargetFramework)' != 'net9.0'">
+  <ItemGroup Condition="'$(TargetFramework)' != 'net9.0'">
     <PackageReference Include="CS-Script" Version="4.8.19" />
   </ItemGroup>
 
