--- a/src/DebugTool/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/DebugTool/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <SatelliteResourceLanguages>zh-Hans;en-US</SatelliteResourceLanguages>
 
     <!--动态适用GC-->
     <GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode>
