--- a/src/ThingsGateway.Server/Configuration/App.json
+++ b/src/ThingsGateway.Server/Configuration/App.json
@@ -13,6 +13,8 @@
     "SupportPackageNamePrefixs": [
       "ThingsGateway.Admin.Application",
       "ThingsGateway.Admin.Razor",
+      "ThingsGateway.Management",
+      "ThingsGateway.RulesEngine",
 
       "ThingsGateway.Foundation.Razor",
       "ThingsGateway.Debug.Razor",
