--- a/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
+++ b/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
@@ -4,7 +4,7 @@
   <Import Project="..\ThingsGateway.Server\targets\Admin.targets" />
   <Import Project="..\ThingsGateway.Server\targets\Plugin.targets" />
   <Import Project="..\ThingsGateway.Server\targets\CustomPlugin.targets" />
-  <!--<Import Project="..\ThingsGateway.Server\targets\OtherPlugin.targets" />-->
+  <Import Project="..\ThingsGateway.Server\targets\Custom.targets" />
   <PropertyGroup>
     <CustomTargetFramework>net9.0</CustomTargetFramework>
     <TargetFrameworks>net9.0-windows;</TargetFrameworks>
