--- a/src/ThingsGateway.Server/Dockerfile_arm64
+++ b/src/ThingsGateway.Server/Dockerfile_arm64
@@ -5,7 +5,7 @@
 #推送：docker push registry.cn-shenzhen.aliyuncs.com/thingsgateway/thingsgateway_arm64
 
 #aspnetcore9.0环境
-FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine-arm64v8  AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-noble-arm64v8 AS base
 COPY .  /app
 WORKDIR /app
 #默认web
